--- a/apps/elsuenodediana/values.yaml
+++ b/apps/elsuenodediana/values.yaml
@@ -8,8 +8,8 @@ app-template:
         elsuenodediana:
           image:
             #AA: esto no veo de donde sale de la doc, mi wild gess es este por lo que dicen en Installing the Chart, el tag no se de donde sacarlo
-            repository: registry-1.docker.io/bitnamicharts/prestashop
-            tag: 4.0.2.1408@sha256:e539aa15ecc8edec3ea68eb95aa784a15e941b2904920d70bb419c15d59a0d06
+            repository: ghcr.io/prestashop/prestashop
+            tag: 8.1.5
 
           env:
             TZ: Europe/Madrid
