--- a/apps/elsuenodediana/values.yaml
+++ b/apps/elsuenodediana/values.yaml
@@ -44,7 +44,7 @@ app-template:
             repository: mysql
             tag: 5.7
 
-          environment:
+          env:
             MYSQL_ROOT_PASSWORD: admin
             MYSQL_DATABASE: prestashop
 
