--- a/apps/wireguard/values.yaml
+++ b/apps/wireguard/values.yaml
@@ -48,7 +48,7 @@ app-template:
         external-dns.alpha.kubernetes.io/enabled: "true"
       externalTrafficPolicy: Local
       ports:
-        bittorrent:
+        wireguard_loadbalancer:
           enabled: true
           port: 51820
           protocol: UDP
