--- a/apps/elsuenodediana/values.yaml
+++ b/apps/elsuenodediana/values.yaml
@@ -129,5 +129,5 @@ app-template:
     config:
       enabled: true
       globalMounts:
-      - path: /config
+      - path: /
       existingClaim: config-elsuenodediana
